# xuve

./: .gitignore  README.md  env.sample  pyproject.toml  pyrightconfig.json
cli/: ai_client.py  build.py  main.py  parser.py
config/: data.py  env.py
decors/: handle_file_errors.py  handle_json_load_errors.py
lib/: actions.py  cache.py  chunked_semantic_search.py  clean_str.py  data_loaders.py  hybrid_search.py  keyword_search.py  semantic_search.py  stem_words.py  tokenize.py
lib/ai/: action.py  client.py  prompt_builders.py  speller.py
lib/enums/: cache_status.py  enahnce_methods.py  rerank_methods.py
lib/indexes/: inverted_index.py
typedicts/: command_args.py  files_to_write.py  movies.py  rrf_search.py  search_res.py
types/: movies.py
utils/: parse_id.py  safe_float.py  safe_text.py
