[project]
name = "xuve"
version = "0.1.0"
description = "RAG system for searching and retrieving information from movies data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.2",
    "sentence-transformers>=5.1.2",
]


[tool.setuptools]
packages = ["lib", "cli", "decors", "typedicts"]

[projct.scripts]
xuve = "cli.main:main"
